# Infrarust-Velocity-Plugin-Loader

./: .gitignore  .gitmodules  Cargo.toml  Makefile
java/infrarust-velocity/: .gitignore  dependency-reduced-pom.xml  pom.xml
java/infrarust-velocity/src/main/java/dev/infrarust/: NativeFinalize.java
java/infrarust-velocity/src/main/java/dev/infrarust/proxy/: InfrarustPlayer.java  InfrarustServer.java
java/infrarust-velocity/src/main/java/dev/infrarust/proxy/server/: InfrarustRegisteredServer.java
java/infrarust-velocity/src/main/java/io/github/jni_rs/jbindgen/: RustPrimitive.java
java/infrarust-velocity/velocity/patch/: velocity.patch
src/: handle.rs  lib.rs  loader.rs
src/java/: handle.rs  mod.rs
src/java/implementation/: mod.rs  type_map
src/java/implementation/dev/: mod.rs
src/java/implementation/dev/infrarust/: mod.rs  native_finalize.rs
src/java/implementation/dev/infrarust/proxy/: infrarust_player.rs  infrarust_server.rs  mod.rs
src/java/implementation/dev/infrarust/proxy/server/: mod.rs  registered_server.rs
src/java/implementation/java/: mod.rs
src/java/implementation/java/net/: inet_socket_address.rs  mod.rs
src/java/implementation/java/nio/file/: path.rs
src/java/implementation/java/util/: array_list.rs  mod.rs  optional.rs
src/plugin/: mod.rs  plugin_candidate.rs  velocity_plugin.rs
src/types/: mod.rs  velocity_plugin_metadata.rs
