[package]
name = "infrarust-plugin-loader-velocity"
version = "0.1.0"
edition = "2024"

[dependencies]
infrarust-api = { git = "https://github.com/Shadowner/Infrarust.git", branch = "ft/v2.0", version = "2.0.0-alpha.1" }
infrarust-core = { git = "https://github.com/Shadowner/Infrarust.git", branch = "ft/v2.0", version = "2.0.0-alpha.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = { version = "8.3.1"}
