[package]
name = "infrarust-plugin-loader-velocity"
version = "0.1.0"
edition = "2024"

[dependencies]
infrarust-api = { git = "https://github.com/Shadowner/Infrarust.git", tag = "v2.0.0-alpha.1" }
jni = { version = "0.22.4", features = ["invocation"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = "1.22.0"
zip = { version = "8.3.1"}

[dev-dependencies]
serial_test = "3.4.0"
